--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -21,6 +21,7 @@ RUN a2enmod rewrite headers
 
 COPY . /var/www/html
 
+RUN composer install --optimize-autoloader
 RUN php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan view:cache
 
 WORKDIR /var/www/html
