--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -19,10 +19,11 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd ldap
 RUN a2enmod rewrite headers
 
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
 COPY . /var/www/html
 
-RUN composer install --optimize-autoloader
-RUN php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan view:cache
+RUN composer install --optimize-autoloader && php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan view:cache
 
 WORKDIR /var/www/html
 
