--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -22,6 +22,7 @@ RUN a2enmod rewrite headers
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 COPY . /var/www/html
+COPY .env.example /var/www/html/.env
 
 RUN composer install --optimize-autoloader && php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan view:cache
 
