--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -25,6 +25,7 @@ COPY . /var/www/html
 COPY .env.example /var/www/html/.env
 
 RUN composer install --optimize-autoloader && php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan view:cache
+RUN npm install & npm run build && rm -rf /var/www/html/node_modules/
 
 WORKDIR /var/www/html
 
