--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -12,9 +12,11 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     libldap2-dev \
     zip \
-    unzip
+    unzip 
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+RUN curl -fsSL https://deb.nodesource.com/setup_14.x | bash
 
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd ldap
 RUN a2enmod rewrite headers
