--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -17,6 +17,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://deb.nodesource.com/setup_14.x | bash
+RUN apt-get update && apt-get install -y nodejs
 
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd ldap
 RUN a2enmod rewrite headers
