--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -27,6 +27,8 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 COPY . /var/www/html
 COPY .env.example /var/www/html/.env
 
+RUN git config --global --add safe.directory /var/www/html
+
 RUN composer install --optimize-autoloader && php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan view:cache
 RUN npm install && npm run build && rm -rf /var/www/html/node_modules/
 
